fix the color contrast ratio

--- a/style.css
+++ b/style.css
@@ -1,11 +1,8 @@
 *{
     padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  
+   
 }
-
-
-
 
 html{
     overflow: hidden;
@@ -14,7 +11,7 @@ html{
 }
 
 body{
-    font-family: Arial, Helvetica, sans-serif;    
+ 
     background-color: #15141f;
     color: yellow;
 }
